src/main/java/org/entitypedia/games/common/repository/hibernateimpl/filter/parser/FilterParser.java
// Generated from Filter.g4 by ANTLR 4.4

package org.entitypedia.games.common.repository.hibernateimpl.filter.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class FilterParser extends Parser {
	public static final int
		T__2=1, T__1=2, T__0=3, LRB=4, RRB=5, EQ=6, EQP=7, GE=8, GEP=9, GT=10, 
		GTP=11, LIKE=12, ILIKE=13, LE=14, LEP=15, LT=16, LTP=17, NE=18, NEP=19, 
		SEQ=20, SGE=21, SGT=22, SLE=23, SLT=24, SNE=25, ISEMPTY=26, ISNOTEMPTY=27, 
		ISNOTNULL=28, ISNULL=29, AND=30, OR=31, NOT=32, Identifier=33, DateLiteral=34, 
		FloatingPointLiteral=35, DecimalLiteral=36, StringLiteral=37, WS=38;
	public static final String[] tokenNames = {
		"<INVALID>", "'.'", "'false'", "'true'", "'('", "')'", "'eq'", "'eqP'", 
		"'ge'", "'geP'", "'gt'", "'gtP'", "'like'", "'ilike'", "'le'", "'leP'", 
		"'lt'", "'ltP'", "'ne'", "'neP'", "'sizeEq'", "'sizeGe'", "'sizeGt'", 
		"'sizeLe'", "'sizeLt'", "'sizeNe'", "'isEmpty'", "'isNotEmpty'", "'isNotNull'", 
		"'isNull'", "'and'", "'or'", "'not'", "Identifier", "DateLiteral", "FloatingPointLiteral", 
		"DecimalLiteral", "StringLiteral", "WS"
	};
	public static final int
		RULE_init = 0, RULE_expr = 1, RULE_oper = 2, RULE_literal = 3, RULE_qualifiedName = 4, 
		RULE_booleanLiteral = 5;
	public static final String[] ruleNames = {
		"init", "expr", "oper", "literal", "qualifiedName", "booleanLiteral"
	};

	@Override
	public String getGrammarFileName() { return "Filter.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	public FilterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public static class InitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FilterParser.EOF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	@RuleVersion(0)
	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12); expr(0);
			setState(13); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConContext extends ExprContext {
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode AND() { return getToken(FilterParser.AND, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ConContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitCon(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NOT() { return getToken(FilterParser.NOT, 0); }
		public NegContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitNeg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BktContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RRB() { return getToken(FilterParser.RRB, 0); }
		public TerminalNode LRB() { return getToken(FilterParser.LRB, 0); }
		public BktContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitBkt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OpContext extends ExprContext {
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public OpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DisContext extends ExprContext {
		public List<? extends ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode OR() { return getToken(FilterParser.OR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DisContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitDis(this);
			else return visitor.visitChildren(this);
		}
	}

	@RuleVersion(0)
	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			switch (_input.LA(1)) {
			case NOT:
				{
				_localctx = new NegContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(16); match(NOT);
				setState(17); expr(4);
				}
				break;
			case Identifier:
				{
				_localctx = new OpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(18); oper();
				}
				break;
			case LRB:
				{
				_localctx = new BktContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(19); match(LRB);
				setState(20); expr(0);
				setState(21); match(RRB);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(31);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ConContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(25);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(26); match(AND);
						setState(27); expr(4);
						}
						break;

					case 2:
						{
						_localctx = new DisContext(new ExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(28);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(29); match(OR);
						setState(30); expr(3);
						}
						break;
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OperContext extends ParserRuleContext {
		public OperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oper; }
	 
		public OperContext() { }
		public void copyFrom(OperContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IsNotEmptyContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode ISNOTEMPTY() { return getToken(FilterParser.ISNOTEMPTY, 0); }
		public IsNotEmptyContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitIsNotEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsNullContext extends OperContext {
		public TerminalNode ISNULL() { return getToken(FilterParser.ISNULL, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public IsNullContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitIsNull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsNotNullContext extends OperContext {
		public TerminalNode ISNOTNULL() { return getToken(FilterParser.ISNOTNULL, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public IsNotNullContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitIsNotNull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IlikeContext extends OperContext {
		public TerminalNode ILIKE() { return getToken(FilterParser.ILIKE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(FilterParser.StringLiteral, 0); }
		public IlikeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitIlike(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GePContext extends OperContext {
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public TerminalNode GEP() { return getToken(FilterParser.GEP, 0); }
		public GePContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitGeP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NePContext extends OperContext {
		public TerminalNode NEP() { return getToken(FilterParser.NEP, 0); }
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public NePContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitNeP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SltContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SLT() { return getToken(FilterParser.SLT, 0); }
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SltContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSlt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LtPContext extends OperContext {
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public TerminalNode LTP() { return getToken(FilterParser.LTP, 0); }
		public LtPContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitLtP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SgtContext extends OperContext {
		public TerminalNode SGT() { return getToken(FilterParser.SGT, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SgtContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSgt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GtPContext extends OperContext {
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public TerminalNode GTP() { return getToken(FilterParser.GTP, 0); }
		public GtPContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitGtP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GeContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode GE() { return getToken(FilterParser.GE, 0); }
		public GeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitGe(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LtContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode LT() { return getToken(FilterParser.LT, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LtContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitLt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LikeContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(FilterParser.StringLiteral, 0); }
		public TerminalNode LIKE() { return getToken(FilterParser.LIKE, 0); }
		public LikeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitLike(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LePContext extends OperContext {
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public TerminalNode LEP() { return getToken(FilterParser.LEP, 0); }
		public LePContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitLeP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsEmptyContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode ISEMPTY() { return getToken(FilterParser.ISEMPTY, 0); }
		public IsEmptyContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitIsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LeContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode LE() { return getToken(FilterParser.LE, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public LeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitLe(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NeContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode NE() { return getToken(FilterParser.NE, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public NeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitNe(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SeqContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SEQ() { return getToken(FilterParser.SEQ, 0); }
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SeqContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSeq(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GtContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode GT() { return getToken(FilterParser.GT, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public GtContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitGt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SgeContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SGE() { return getToken(FilterParser.SGE, 0); }
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SgeContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSge(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SneContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode SNE() { return getToken(FilterParser.SNE, 0); }
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SneContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSne(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqPContext extends OperContext {
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<? extends QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public TerminalNode EQP() { return getToken(FilterParser.EQP, 0); }
		public EqPContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitEqP(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SleContext extends OperContext {
		public TerminalNode SLE() { return getToken(FilterParser.SLE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TerminalNode DecimalLiteral() { return getToken(FilterParser.DecimalLiteral, 0); }
		public SleContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitSle(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqContext extends OperContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode EQ() { return getToken(FilterParser.EQ, 0); }
		public EqContext(OperContext ctx) { copyFrom(ctx); }
		@Override
		public <Result> Result accept(ParseTreeVisitor<? extends Result> visitor) {
			if ( visitor instanceof FilterVisitor<?> ) return ((FilterVisitor<? extends Result>)visitor).visitEq(this);
			else return visitor.visitChildren(this);
		}
	}

	@RuleVersion(0)
	public final OperContext oper() throws RecognitionException {
		OperContext _localctx = new OperContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_oper);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new EqContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(36); qualifiedName();
				setState(37); match(EQ);
				setState(38); literal();
				}
				break;

			case 2:
				_localctx = new EqPContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(40); qualifiedName();
				setState(41); match(EQP);
				setState(42); qualifiedName();
				}
				break;

			case 3:
				_localctx = new GeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(44); qualifiedName();
				setState(45); match(GE);
				setState(46); literal();
				}
				break;

			case 4:
				_localctx = new GePContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(48); qualifiedName();
				setState(49); match(GEP);
				setState(50); qualifiedName();
				}
				break;

			case 5:
				_localctx = new GtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(52); qualifiedName();
				setState(53); match(GT);
				setState(54); literal();
				}
				break;

			case 6:
				_localctx = new GtPContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(56); qualifiedName();
				setState(57); match(GTP);
				setState(58); qualifiedName();
				}
				break;

			case 7:
				_localctx = new LikeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(60); qualifiedName();
				setState(61); match(LIKE);
				setState(62); match(StringLiteral);
				}
				break;

			case 8:
				_localctx = new IlikeContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(64); qualifiedName();
				setState(65); match(ILIKE);
				setState(66); match(StringLiteral);
				}
				break;

			case 9:
				_localctx = new LeContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(68); qualifiedName();
				setState(69); match(LE);
				setState(70); literal();
				}
				break;

			case 10:
				_localctx = new LePContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(72); qualifiedName();
				setState(73); match(LEP);
				setState(74); qualifiedName();
				}
				break;

			case 11:
				_localctx = new LtContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(76); qualifiedName();
				setState(77); match(LT);
				setState(78); literal();
				}
				break;

			case 12:
				_localctx = new LtPContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(80); qualifiedName();
				setState(81); match(LTP);
				setState(82); qualifiedName();
				}
				break;

			case 13:
				_localctx = new NeContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(84); qualifiedName();
				setState(85); match(NE);
				setState(86); literal();
				}
				break;

			case 14:
				_localctx = new NePContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(88); qualifiedName();
				setState(89); match(NEP);
				setState(90); qualifiedName();
				}
				break;

			case 15:
				_localctx = new SeqContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(92); qualifiedName();
				setState(93); match(SEQ);
				setState(94); match(DecimalLiteral);
				}
				break;

			case 16:
				_localctx = new SgeContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(96); qualifiedName();
				setState(97); match(SGE);
				setState(98); match(DecimalLiteral);
				}
				break;

			case 17:
				_localctx = new SgtContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(100); qualifiedName();
				setState(101); match(SGT);
				setState(102); match(DecimalLiteral);
				}
				break;

			case 18:
				_localctx = new SleContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(104); qualifiedName();
				setState(105); match(SLE);
				setState(106); match(DecimalLiteral);
				}
				break;

			case 19:
				_localctx = new SltContext(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(108); qualifiedName();
				setState(109); match(SLT);
				setState(110); match(DecimalLiteral);
				}
				break;

			case 20:
				_localctx = new SneContext(_localctx);
				enterOuterAlt(_localctx, 20);
				{
				setState(112); qualifiedName();
				setState(113); match(SNE);
